# arch

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  README.md  api_llm_gateway.rest  api_model_server.rest  api_prompt_gateway.rest  archgw.code-workspace  build_filter_image.sh  configuration_reference.html  gateway.code-workspace  genindex.html  index.html  objects.inv  root.html  search.html  searchindex.js  sitemap.xml  yaml_to_tools_dict.py
.github/workflows/: archgw.yml  checks.yml  docker-push.yml  e2e_archgw.yml  e2e_model_server.yml  e2e_test_demos.yml  e2e_tests.yml  model-server-tests.yml  pre-commit.yml  python-tests.yml  rust_tests.yml  (+2 more)
_sources/: configuration_reference.rst  root.rst
_static/: awesome-docsearch.css  documentation_options.js  pygments.css  theme.css  theme.js
arch/: Cargo.toml  Dockerfile  README.md  arch_config_schema.yaml  build_filter.sh  build_filter_image.sh  config_generator.py  docker-compose.dev.yaml  docker-compose.e2e.yaml  docker-compose.yaml  download_mistral_7b.sh  envoy.template.dev.yaml  envoy.template.yaml  envoy.yaml  init_vector_store.sh  stream_traces.py  supervisord.conf
arch/tools/: MANIFEST.in  README.md  build-cli.sh  build_cli.sh  cli.py  config_generator.py  core.py  pyproject.toml  setup.py  targets.py  utils.py
arch/tools/cli/: config_generator.py  consts.py  core.py  main.py  targets.py  utils.py
arch/tools/test/: fastapi_test.py  fastapi_test_prompt_targets.yml  test_cli.py
build_with_arch/: agent.html  multi_turn.html  rag.html
chatbot-client/: requirements.txt  run.py
chatbot-ui/: requirements.txt
chatbot_ui/: Dockerfile  common.py  requirements.txt  run.py  run_stream.py
concepts/: llm_provider.html  prompt_target.html
config_generator/: Dockerfile  arch_config_schema.yaml  config_generator.py  requirements.txt
crates/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: common_types.rs  configuration.rs  consts.rs  errors.rs  http.rs  lib.rs  llm_providers.rs  path.rs  pii.rs  ratelimit.rs  routing.rs  stats.rs  tokenizer.rs  tracing.rs
crates/common/src/api/: hallucination.rs  mod.rs  open_ai.rs  prompt_guard.rs  zero_shot.rs
crates/common/src/embeddings/: create_embedding_request.rs  create_embedding_request_input.rs  create_embedding_response_usage.rs  embedding.rs
demos/test_runner/: common.py  pyproject.toml  run_demo_tests.sh  test_demos.py
demos/weather_forecast/: README.md  arch_config.yaml  docker-compose-honeycomb.yaml  docker-compose-jaeger.yaml  docker-compose-logfire.yaml  docker-compose-signoz.yaml  docker-compose.jaeger.yml  docker-compose.signoz.yml  docker-compose.yaml  main.py  pyproject.toml  run_demo.sh
demos/weather_forecast/grafana/dashboards/: envoy_overview.json
demos/weather_forecast/otel-collector/: Dockerfile
demos/weather_forecast/weather_forecast_service/: main.py  pyproject.toml
docs/: CNAME  Dockerfile  README.md  build_docs.sh  requirements.txt
e2e_tests/: README.md  api_model_server.rest  api_prompt_gateway.rest  common.py  common_scripts.sh  pyproject.toml  run_e2e_tests.sh  test_llm_gateway.py  test_prompt_gateway.py
embedding-server/: Dockerfile  requirements.txt
envoyfilter/: Cargo.toml  Dockerfile  README.md  build_filter.sh  docker-compose.yaml  envoy.template.yaml  envoy.yaml  katanemo-config.yaml
envoyfilter/.github/workflows/: checks.yml
envoyfilter/src/: common_types.rs  configuration.rs  consts.rs  embeddings.rs  filter_context.rs  lib.rs  llm_backend.rs  llm_providers.rs  main.rs  ratelimit.rs  routing.rs  stats.rs  stream_context.rs  tokenizer.rs
envoyfilter/tests/: integration.rs
function_resolver/: Dockerfile  requirements.txt
get_started/: intro_to_arch.html  overview.html  quickstart.html
getting_started/: getting_started.html  use_cases.html
guides/: function_calling.html  prompt_guard.html
intro/: getting_help.html  intro.html  life_of_a_request.html  what_is_arch.html
llms/: llms.html
model_server/: Dockerfile  Dockerfile.gpu  README.md  gpu_Dockerfile  guard_model_config.yaml  openai_params.yaml  pyproject.toml  requirements.txt  setup.py
model_server/app/: __init__.py  cli.py  employee_data_generator.py  guard_model_config.json  guard_model_config.yaml  install.py  load_models.py  loader.py  main.py  network_data_generator.py  openai_params.yaml  test.ipynb  utils.py
model_server/app/arch_fc/: arch_fc.py  arch_handler.py  common.py  test.py  test_arch_fc.py
model_server/app/commons/: constants.py  globals.py  utilities.py
model_server/app/function_calling/: hallucination_handler.py  model_handler.py  model_utils.py
model_server/app/model_handler/: base_handler.py  function_calling.py  guardrails.py  hallucination_handler.py
model_server/app/prompt_guard/: model_handler.py  model_utils.py
model_server/app/tests/: test.ipynb  test_app.py  test_cases.json  test_cli_stop_server.py  test_function_calling.py  test_guardrails.py  test_hallucination.py  test_loaders_cpu.py  test_loaders_gpu.py  test_loaders_mps.py  test_state.py
model_server/src/: cli.py  main.py
model_server/src/commons/: globals.py  utilities.py  utils.py
model_server/src/core/: function_calling.py  guardrails.py  hallucination.py  hallucination_handler.py  model_utils.py
model_server/tests/: test_app.py  test_cli_stop_server.py
model_server/tests/core/: test_cases.json  test_function_calling.py  test_guardrails.py  test_hallucination.py  test_state.py
observability/: access_logs.html  observability.html  stats.html  tracing.html
omf-spec/: openapi.yaml
public-types/: Cargo.toml
public_types/: Cargo.toml
resources/: configuration_reference.html  error_target.html
tests/e2e/: README.md  common.py  common_scripts.sh  docker-compose.yaml  pyproject.toml  run_e2e_tests.sh  test_prompt_gateway.py
tests/modelserver/: pyproject.toml  test.ipynb  test_cases.yaml  test_hallucination.py  test_hallucination_data.yaml  test_modelserver.py  test_success_data.yaml
tools/: python-client-generator.sh  typescript-client-generator.sh
www/: index.html
(+406 files in other folders)
