[tool.poetry]
name = "archgw"
version = "0.1.5"
description = "Python-based CLI tool to manage Arch Gateway."
authors = ["Katanemo Labs, Inc."]
packages = [
    { include = "cli" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
archgw_modelserver = "0.1.5"
pyyaml = "^6.0.2"
pydantic = "^2.10.1"
click = "^8.1.7"
jinja2 = "^3.1.4"
jsonschema = "^4.23.0"
setuptools = "75.5.0"
huggingface_hub = "^0.26.0"
docker = "^7.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
archgw = "cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
