[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
duration-string = { version = "0.3.0", features = ["serde"] }
proxy-wasm = "0.2.1"
governor = { version = "0.6.3", default-features = false, features = ["no_std"]}
log = "0.4"
derivative = "2.2.0"
thiserror = "1.0.64"
tiktoken-rs = "0.5.9"
rand = "0.8.5"
serde_json = "1.0"
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.64"
